closing search and products menu bar with outside clicks as well as opening search animation. collapsing class issues fixed for products menu in the header

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -4,6 +4,11 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
+html {
+    -ms-scroll-snap-type: y mandatory;
+    scroll-snap-type: y mandatory;
+    scroll-padding: 0;
+}
 h1,
 h2,
 h3,
@@ -67,11 +72,16 @@ header {
     position: relative;
     border-top: 0.5rem solid white;
 }
+header > nav > div.left,
+header > nav > div.right {
+    height: 4rem;
+}
 header > nav > div > ul {
     list-style-type: none;
     /* border: 3px solid red; */
     padding: 0;
     margin: 0;
+    height: 100%;
 }
 header > nav > div > ul > li {
     text-align: center;
@@ -134,7 +144,8 @@ header i.fa-search {
     color: white;
 }
 /* products collapse menu */
-header > nav > div.collapse {
+header > nav > div.collapse,
+header > nav > div.collapsing {
     text-align: right;
     position: absolute;
     left: 0;
@@ -147,27 +158,33 @@ header > nav > div.collapse {
     background-repeat: no-repeat;
     background-position: center;
 }
-header > nav > div.collapse > div.card li {
+header > nav > div.collapse > div.card li,
+header > nav > div.collapsing > div.card li {
     padding: 0.75rem 0;
 }
-header > nav > div.collapse > div.card a {
+header > nav > div.collapse > div.card a,
+header > nav > div.collapsing > div.card a {
     color: white;
-    /* padding: 1rem 0; */
+    -webkit-transition: color 1s;
+    transition: color 1s;
     text-shadow: 1px 1px 2px black, -1px -1px 2px black;
 }
-header > nav > div.collapse > div.card {
+header > nav > div.collapse > div.card,
+header > nav > div.collapsing > div.card {
     background-color: transparent;
 }
-header > nav > div.collapse > div.card > div.card-header {
+header > nav > div.collapse > div.card > div.card-header,
+header > nav > div.collapsing > div.card > div.card-header {
     border-bottom: 3px solid white;
     -webkit-transition: border-bottom 0.5s;
     -webkit-transition: border-bottom 0.5s;
     transition: border-bottom 0.5s;
 }
-header > nav > div.collapse > div.card > div.card-body {
+/* header > nav > div.collapse > div.card > div.card-body {
     font-size: 1rem;
-}
-header > nav > div.collapse > div.card > div.card-body > ul {
+} */
+header > nav > div.collapse > div.card > div.card-body > ul,
+header > nav > div.collapsing > div.card > div.card-body > ul {
     list-style-type: none;
 }
 
@@ -257,6 +274,16 @@ header > nav > ul.hamburger_opened_menu > li:hover {
 div.modal_box {
     left: 0;
     right: 0;
+    -webkit-transition: 1s;
+    transition: 1s;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -webkit-transform-origin: 70% 0;
+    transform-origin: 70% 0;
+}
+body > div.modal_box_scale {
+    -webkit-transform: scale(1);
+    transform: scale(1);
 }
 div.modal_box > span.close {
     color: red;
@@ -322,6 +349,7 @@ div.modal_box > div.modal_content > div.products_gallery > div > div.card > div.
 div.modal_box > div.modal_content > div.products_gallery > div > div.card > div.card-body > p {
     font-size: 0.75rem;
 }
+
 @media screen and (max-width: 946px) {
     header > nav > div.collapse > div.card > div.card-body,
     header > nav > div.collapse > div.card > div.card-header {
@@ -376,6 +404,12 @@ div.modal_box > div.modal_content > div.products_gallery > div > div.card > div.
     /* disapearing header hamburger and search button in large screens: */
     header > nav > div.left > ul.hamburger_menu {
         display: none !important;
+    }
+}
+@media screen and (max-width: 690px) {
+    div.modal_box {
+        -webkit-transform-origin: 30% 0;
+                transform-origin: 30% 0;
     }
 }
 @media screen and (max-width: 310px) {
